# corps

./: README.md  roleplaying.idl
Corps-Client/: ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  clienttext-impl.cc  clienttext-impl.hh  configure.in
Corps-Client/man/: Makefile.am  corps-client.6
Corps-Client/po/: .cvsignore  corps-client.pot  de.po
Corps-Client/src/: .cvsignore  Makefile.am  arghandler.cc  arghandler.hh  client.cc  client.hh  gamelist.cc  gamelist.hh  main.cc
Corps-Client/src/.deps/: arghandler.P  client-impl.pp  client.P  gamelist.P  main.P
Corps-Core/: ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.in  corps.m4  i18n.hh  logo.xcf
Corps-Core/docs/: CONCEPTS  HACKING  Makefile.am  clients.txt  corba.sgml
Corps-Core/idl/: Makefile.am  corps-client.idl  corps-data.idl  corps-games.idl  corps-mime.idl
Corps-Core/libcorpscorba/: .cvsignore  Makefile.am  README  ch-history-wrapper.cc  ch-history-wrapper.hh  character-impl.cc  character-impl.hh  client-impl.cc  client-impl.hh  client-wrapper.cc  client-wrapper.hh  clienthandler-impl.cc  clienthandler-impl.hh  clienthandler-wrapper.cc  clienthandler-wrapper.hh  corba.cc  corba.hh  corbaexception.cc  corbaexception.hh  game-impl.cc  game-impl.hh  game-wrapper.cc  game-wrapper.hh  gamelist-impl.cc  gamelist-impl.hh  gamelist-wrapper.cc  gamelist-wrapper.hh  orb.cc  orb.hh  property-impl.cc  property-impl.hh  roleplaying.hh  roleplayingSK.cc  system-impl.cc  system-impl.hh  system-wrapper.cc  system-wrapper.hh  thing-impl.cc  thing-impl.hh
Corps-Core/libcorpscorba/.deps/: ch-history-wrapper.P  character-impl.P  client-impl.P  client-wrapper.P  clienthandler-impl.P  clienthandler-wrapper.P  corba.P  corbaexception.P  game-impl.P  game-wrapper.P  gamelist-impl.P  gamelist-wrapper.P  mime-impl.P  mime-impl.pp  orb.P  property-impl.P  roleplayingSK.P  system-impl.P  system-wrapper.P  thing-impl.P
Corps-Core/libcorpstool/: Makefile.am  tools.cc  tools.hh
Corps-Core/libcorpstool/.deps/: corbaexception.P  exception.P  file_exception.P  tools.P  xml.P
Corps-Core/po/: .cvsignore  corps-core.pot  de.po
Corps-Cyber/: .cvsignore  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.in
Corps-Cyber/adventures/: Makefile.am
Corps-Cyber/adventures/maniax/: .cvsignore  Makefile.am  arghandler.cc  arghandler.hh  game.cc  game.hh  maniax.cc  plot.cc  plot.hh  supermarket.xml
Corps-Cyber/adventures/maniax/.deps/: arghandler.P  game.P  game.pp  maniax.P  plot.P
Corps-Cyber/po/: .cvsignore  corps-cyber.pot  de.po
Corps-Cyber/system/: Makefile.am  character.cc  character.hh  cyber_character.css  cyber_character.dtd  sam.xml  system.cc  system.hh
Corps-Cyber/system/.deps/: character.P  system.P
Corps-GameList/: AUTHORS  ChangeLog  README  TODO  autogen.sh  configure.in
Corps-GameList/po/: .cvsignore  corps-gamelist.pot  de.po
Corps-GameList/src/: .cvsignore  Makefile.am  arghandler.cc  arghandler.hh  gamelist.cc  gamelist.hh  main.cc
Corps-GameList/src/.deps/: gamelist.P  main.P
Corps-Gtk/: .cvsignore  ChangeLog  Makefile.am  NEWS  README  TODO  about.h  autogen.sh  clientimage-impl.cc  clientimage-impl.hh  clientmap-impl.cc  clientmap-impl.hh  clienttext-impl.cc  clienttext-impl.hh  configure.in
Corps-Gtk/gcorps/: .cvsignore  Makefile.am  arghandler.cc  arghandler.hh  client-gui.cc  client-gui.hh  client-i.cc  client-i.hh  client.cc  client.hh  gamelist.cc  gamelist.hh  gui.cc  gui.hh  gui_gamechooser.cc  gui_gamechooser.hh  gui_gamewindow.cc  gui_gamewindow.hh  gui_playfield.cc  gui_playfield.hh  main.cc  utils.cc  utils.hh
Corps-Gtk/gcorps/.deps/: client-gui.P  client-i.P  client.P  clientimage-impl.pp  clientmap-impl.pp  clienttext-impl.pp  game-wrapper.pp  gamelist-impl.P  gamelist-wrapper.pp  gamelist.P  gui.P  gui_gamechooser.P  gui_gamewindow.P  gui_playfield.P  main.P  utils.P
Corps-Gtk/libcorpsgtk/: Makefile.am  gui_about.cc  gui_about.hh  gui_busyreq.cc  gui_busyreq.hh  gui_exception.cc  gui_exception.hh  gui_filereq.cc  gui_filereq.hh  gui_inputreqs.cc  gui_inputreqs.hh  gui_msgreqs.cc  gui_msgreqs.hh  gui_requester.cc  gui_requester.hh  map_widget.cc  map_widget.hh  trashcan.cc  trashcan.hh
Corps-Gtk/libcorpsgtk/.deps/: gui_about.P  gui_busyreq.P  gui_exception.P  gui_filereq.P  gui_inputreqs.P  gui_msgreqs.P  gui_requester.P  map_widget.P  trashcan.P
Corps-Gtk/maptool/: .cvsignore  Makefile.am  arghandler.cc  arghandler.hh  gui.cc  gui.hh  gui_iconview.cc  gui_iconview.hh  gui_mapwidget.cc  gui_mapwidget.hh  gui_mapwindow.cc  gui_mapwindow.hh  gui_sizereq.cc  gui_sizereq.hh  main.cc
Corps-Gtk/maptool/.deps/: arghandler.P  gui.P  gui_iconview.P  gui_mapwidget.P  gui_mapwindow.P  gui_sizereq.P  main.P
Corps-Gtk/pixmaps/: Makefile.am  corps_lamp.xpm  corps_multic.xpm  corps_multip.xpm
Corps-Gtk/po/: .cvsignore  corps-gtk.pot  de.po
Corps-Maps/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.in  i18n.hh
Corps-Maps/idl/: Makefile.am  corps-maps.idl
Corps-Maps/images/: street-patterns.xcf  street1.xcf
Corps-Maps/libcorpsmap/: Makefile.am  map.cc  map.hh  mapfile.cc  mapfile.hh  mapmodifier.cc  mapmodifier.hh  mapset.cc  mapset.hh  mapsetfile.cc  mapsetfile.hh
Corps-Maps/libcorpsmap/.deps/: map.P  mapfile.P  mapmodifier.P  mapset.P  mapsetfile.P
Corps-Maps/maps/: Makefile.am  corps-map.dtd
Corps-Maps/mapsets/: Makefile.am  corps-mapset.css  corps-mapset.dtd  generic.xml
Corps-Maps/po/: .cvsignore  corps-maps.pot  de.po
Corps-Maps/test/: .cvsignore  Makefile.am  corps-testmap.cc  map.xml
Corps-Maps/test/.deps/: corps-testmap.P
Corps-TextServer/: .cvsignore  ChangeLog  Makefile.am  README  TODO  autogen.sh  configure.in
Corps-TextServer/po/: .cvsignore  corps-textserver.pot  de.po
Corps-TextServer/src/: .cvsignore  Makefile.am  arghandler.cc  arghandler.hh  game.cc  game.hh  main.cc  system.cc  system.hh
Corps-TextServer/src/.deps/: game.P  main.P  system.P
