lib_LIBRARIES = libcorpsgtk.a

CXXFLAGS = @CXXFLAGS@ @GTKMM_CFLAGS@
INCLUDES = -I$(top_srcdir)

libcorpsgtk_a_SOURCES = \
	gui_about.cc \
	gui_busyreq.cc \
	gui_exception.cc \
	gui_filereq.cc \
	gui_inputreqs.cc \
	gui_msgreqs.cc \
	gui_requester.cc \
	map_widget.cc \
	trashcan.cc

noinst_HEADERS = \
	gui_about.hh \
	gui_busyreq.hh \
	gui_exception.hh \
	gui_filereq.hh \
	gui_inputreqs.hh \
	gui_msgreqs.hh \
	gui_requester.hh \
	map_widget.hh \
	trashcan.hh
