corpsdatadir = $(datadir)/corps
mapsetdir = $(corpsdatadir)/mapsets
dtddir = $(libdir)/sgml/dtd
cssdir = $(libdir)/sgml/stylesheet/css

MAPSETS = \
	generic.xml
PIXMAPS = \
	generic.png \
	generic_mod.png

mapset_DATA = $(MAPSETS) $(PIXMAPS)
dtd_DATA = corps-mapset.dtd
css_DATA = corps-mapset.css

EXTRA_DIST = $(mapset_DATA) $(dtd_DATA) $(css_DATA)
